fixefixed remaing Div's to semantic tags

--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
-    <header>
-        <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <figure>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -23,10 +22,12 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </figure>
+        </nav>
+        <!-- when I switch this div to nav I dont get the correct results *edit Changed to nav in html 
+        and changed the div in css to nav to get correct results-->
     </header>
-  <!-- this div for the background image seems weird -->
-    <div class="hero"></div>
+  <!-- this div for the background image seems weird- *edit changed to img seems to work the same-->
+    <img class="hero"></img>
      <!--this all should be sections? or even figures?  -->
     <section class="content">
         <section id="search-engine-optimization" class="search-engine-optimization">
