adjusted metadata to include viewport

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon SEO Optimization Reputation and Marketing</title>
 </head>
@@ -54,7 +56,8 @@
         </section>
     </section>
     <!-- changed divs that contained multiple divs to sections based on the web page layout -->
-    <article class="benefits">
+    <article class="benefits">  
+        <!-- article makes the most sense for this group of informational images -->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="A Gear representing work turning into money"/>
